# render-pcd-rs

./: .gitattributes  Cargo.toml  README.md
assets/: FilterAndSave.ipynb  node_pose.json  node_pose_3000000.json  point_cloud.snappy.parquet  point_cloud_3000000.snappy.parquet
src/: main.rs  parquet_plugin.rs
www/: index.html
